--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
     implementation (platform('org.jetbrains.kotlin:kotlin-bom:1.8.0'))
     testImplementation 'junit:junit:4.13.2'
+    implementation 'com.wrapp.floatlabelededittext:library:0.0.6'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
