--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -46,7 +50,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
     implementation (platform('org.jetbrains.kotlin:kotlin-bom:1.8.0'))
+    implementation  'io.ak1:bubbletabbar:1.0.8'
     testImplementation 'junit:junit:4.13.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.wrapp.floatlabelededittext:library:0.0.6'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
