--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,22 @@
         tools:targetApi="31">
         <activity
             android:name=".BottomNavActivity"
-            android:exported="false"
-            android:label="@string/title_activity_bottom_nav">
+            android:theme="@style/Theme.Design.Light.NoActionBar"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Design.Light.NoActionBar">
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
