--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -51,8 +52,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
     implementation (platform('org.jetbrains.kotlin:kotlin-bom:1.8.0'))
     implementation  'io.ak1:bubbletabbar:1.0.8'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.beksomega:loopinglayout:0.5.0'
     implementation 'com.wrapp.floatlabelededittext:library:0.0.6'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
