--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
+    implementation 'com.beust:klaxon:5.5'
     implementation (platform('org.jetbrains.kotlin:kotlin-bom:1.8.0'))
     implementation  'io.ak1:bubbletabbar:1.0.8'
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
