--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
